# geoimagery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  from_geojson.py  quickstart.py
src/geoimagery/: __init__.py  core.py  geometry.py  utils.py
tests/: conftest.py  test_core.py  test_geometry.py  test_utils.py
