[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "geoimagery"
description = "Download NAIP satellite imagery for any polygon, via Google Earth Engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hari Acharya", email = "hacharya@u.rochester.edu" },
]
keywords = [
  "satellite",
  "imagery",
  "naip",
  "geospatial",
  "earth-engine",
  "remote-sensing",
  "gis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Typing :: Typed",
]
dynamic = ["version"]

# Bare-minimum runtime deps. Heavy geospatial deps live in the extras
# below so users who only need utility functions don't pull in GDAL.
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
# Geometry I/O (GeoJSON / Shapefile / etc.).
geo = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "rioxarray>=0.15",
]
# Google Earth Engine backend.
gee = [
  "earthengine-api>=0.1.400",
  "geemap>=0.32",
]
# Everything an end user needs to actually download imagery.
all = ["geoimagery[geo,gee]"]
# Developer tooling.
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
lint = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
]
dev = ["geoimagery[all,test,lint]"]

[project.urls]
Homepage = "https://github.com/hpa-code/geoimagery"
Documentation = "https://github.com/hpa-code/geoimagery#readme"
Issues = "https://github.com/hpa-code/geoimagery/issues"
Changelog = "https://github.com/hpa-code/geoimagery/blob/main/CHANGELOG.md"
Source = "https://github.com/hpa-code/geoimagery"

# ---------------------------------------------------------------------------
# Build backend config
# ---------------------------------------------------------------------------
[tool.hatch.version]
path = "src/geoimagery/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/geoimagery"]

[tool.hatch.build.targets.sdist]
include = [
  "src/geoimagery",
  "tests",
  "examples",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]

# ---------------------------------------------------------------------------
# Ruff (formatter + linter, replaces black/isort/flake8/pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",         # pyflakes
  "I",         # isort
  "B",         # flake8-bugbear
  "UP",        # pyupgrade
  "SIM",       # flake8-simplify
  "RUF",       # ruff-specific
  "N",         # pep8-naming
  "D",         # pydocstyle
]
ignore = [
  "D100", "D104",  # missing module/package docstrings -- not always useful
  "D203", "D213",  # docstring style choices that conflict
  "E501",          # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true  # geemap / earthengine-api ship without stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
markers = [
  "integration: tests that hit Google Earth Engine (requires auth, skipped by default)",
  "slow: long-running tests",
]

[tool.coverage.run]
source = ["geoimagery"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
